Dynamic by express

--- a/views/circle.html
+++ b/views/circle.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Circle Calculator</title>
-        <link rel="stylesheet" href="../assets/css/style.css" />
+        <link rel="stylesheet" text="text/css" href="css/style.css" />
     </head>
     <body>
         <!-- Header Start -->
@@ -15,10 +15,7 @@
                     <!-- Left Section -->
                     <div class="left">
                         <a href="/"
-                            ><img
-                                class="logo"
-                                src="../assets/img/logo.png"
-                                alt="logo"
+                            ><img class="logo" src="/img/logo.png" alt="logo"
                         /></a>
                     </div>
                     <!-- Right Section -->
@@ -26,11 +23,13 @@
                         <nav class="main-menu">
                             <ul class="flex">
                                 <li>
-                                    <a href="" class="active"
+                                    <a href="/circle" class="active"
                                         >Circle Calculator</a
                                     >
                                 </li>
-                                <li><a href="">Triangle Calculator</a></li>
+                                <li>
+                                    <a href="/triangle">Triangle Calculator</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -52,7 +51,7 @@
                             dolorum natus eveniet officiis? Quaerat, doloribus
                             deleniti. Voluptatum, blanditiis
                         </p>
-                        <form action="" method="post">
+                        <form action="/circle" method="post">
                             <input
                                 type="number"
                                 name="radius"
