--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Area Calculator</title>
-        <link rel="stylesheet" href="../assets/css/style.css" />
+        <link rel="stylesheet" text="text/css" href="css/style.css" />
     </head>
     <body>
         <!-- Header Start -->
@@ -15,18 +15,17 @@
                     <!-- Left Section -->
                     <div class="left">
                         <a href="/"
-                            ><img
-                                class="logo"
-                                src="../assets/img/logo.png"
-                                alt="logo"
+                            ><img class="logo" src="/img/logo.png" alt="logo"
                         /></a>
                     </div>
                     <!-- Right Section -->
                     <div class="right">
                         <nav class="main-menu">
                             <ul class="flex">
-                                <li><a href="">Circle Calculator</a></li>
-                                <li><a href="">Triangle Calculator</a></li>
+                                <li><a href="/circle">Circle Calculator</a></li>
+                                <li>
+                                    <a href="/triangle">Triangle Calculator</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -48,7 +47,7 @@
                             dolorum natus eveniet officiis? Quaerat, doloribus
                             deleniti. Voluptatum, blanditiis
                         </p>
-                        <a href="#" class="btn">Get Started</a>
+                        <a href="/circle" class="btn">Get Started</a>
                     </div>
                 </div>
             </div>
