--- a/views/triangle.html
+++ b/views/triangle.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Triangle Calculator</title>
-        <link rel="stylesheet" href="../assets/css/style.css" />
+        <link rel="stylesheet" text="text/css" href="css/style.css" />
     </head>
     <body>
         <!-- Header Start -->
@@ -15,10 +15,7 @@
                     <!-- Left Section -->
                     <div class="left">
                         <a href="/"
-                            ><img
-                                class="logo"
-                                src="../assets/img/logo.png"
-                                alt="logo"
+                            ><img class="logo" src="img/logo.png" alt="logo"
                         /></a>
                     </div>
                     <!-- Right Section -->
@@ -26,10 +23,10 @@
                         <nav class="main-menu">
                             <ul class="flex">
                                 <li>
-                                    <a href="">Circle Calculator</a>
+                                    <a href="/circle">Circle Calculator</a>
                                 </li>
                                 <li>
-                                    <a href="" class="active"
+                                    <a href="/triangle" class="active"
                                         >Triangle Calculator</a
                                     >
                                 </li>
@@ -54,13 +51,13 @@
                             dolorum natus eveniet officiis? Quaerat, doloribus
                             deleniti. Voluptatum, blanditiis
                         </p>
-                        <form action="" method="post">
+                        <form action="/triangle" method="post">
                             <input
                                 type="number"
-                                name="width"
-                                id="width"
+                                name="base"
+                                id="base"
                                 class="input-control"
-                                placeholder="Enter Width"
+                                placeholder="Enter Base"
                             />
                             <input
                                 type="number"
