--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,8 @@
                             dolorum natus eveniet officiis? Quaerat, doloribus
                             deleniti. Voluptatum, blanditiis
                         </p>
-                        <a href="/circle" class="btn">Get Started</a>
+                        <a href="/circle" class="btn">Use Circle</a>
+                        <a href="/triangle" class="btn btn-next">Use Triangle</a>
                     </div>
                 </div>
             </div>
