--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,9 @@ p {
     -ms-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
 }
+.btn-next {
+    background-color: #232425;
+}
 .btn:hover {
     background: var(--primary-dark);
 }
